kubernetes/ingress-standard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress
spec:
  defaultBackend:
    service:
      name: hello-1
      port:
        number: 80
  rules:
  - http:
      paths:
      - path: /v1
        pathType: Prefix
        backend:
          service:
            name: hello-1
            port:
              number: 80
      - path: /v2
        pathType: Prefix
        backend:
          service:
            name: hello-2
            port:
              number: 80
